# Black-Ops1-Zombie-Hack

./: .clang-format  .gitignore  B01Esp.sln  BO1_Zombie_ESP.sln  CHANGELOG.md  CMakeLists.txt  INTEGRATION_GUIDE.md  MIGRATION.md  README.md  README_MODERN.md  SCRAPING_README.md  scrape_subwoofers.py  scrape_subwoofers_manual.py  scrape_subwoofers_selenium.py
B01Esp/: B01Esp.vcxproj  B01Esp.vcxproj.filters  DataTypes.h  Helper.h  Offset.h  main.cpp
B01Esp/include/: MemMan.h
B01Esp/lib/: glfw3.lib
BO1_Zombie_ESP/: BO1_Zombie_ESP.vcxproj  BO1_Zombie_ESP.vcxproj.filters  Drawing.cpp  Drawing.h  Main.cpp  Offsets.h  Vectors.h  WorldToScreen.cpp  WorldToScreen.h  dllmain.cpp
examples/: CMakeLists.txt  basic_usage.cpp  custom_config.cpp
include/bo1_esp/: bo1_esp.hpp
include/bo1_esp/core/: config.hpp  esp_manager.hpp
include/bo1_esp/game/: entity.hpp  memory.hpp  offsets.hpp
include/bo1_esp/math/: matrix.hpp  vector.hpp
include/bo1_esp/rendering/: gdi_resources.hpp  renderer.hpp
src/: main.cpp
